<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Office365Demo</string>

    <string name="title_activity_mail_item">MailItemActivity</string>
    <string name="title_activity_later_select">ListChooseDialog</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_write_email">Write new Email</string>

    <string name="data_connection_no_data_connection">Sorry, no data connection is available.</string>

    <string name="email_new">New email</string>
    <string name="email_has_attachments_key">HasAttachments</string>

    <string name="emails_array_key">value</string>
    <string name="emails_sender_key">Sender</string>
    <string name="emails_unknown_sender_text_stub">&lt;unknown sender></string>
    <string name="emails_sender_name_key">Name</string>
    <string name="emails_sender_address_key">Address</string>
    <string name="emails_id_key">Id</string>
    <string name="emails_date_time_received_key">DateTimeReceived</string>
    <string name="emails_no_subject_text_stub">&lt;no subject></string>
    <string name="emails_subject_key">Subject</string>
    <string name="emails_body_preview_key">BodyPreview</string>
    <string name="emails_body_key">Body</string>
    <string name="emails_body_content_type_key">ContentType</string>
    <string name="emails_body_content_key">Content</string>

    <string name="content_type_text">Text</string>
    <string name="content_type_html">HTML</string>

    <string name="screens_drawer_delimiter"></string>

    <string name="screens_mailbox">Mailbox</string>
    <string name="screens_mail_later">Later</string>
    <string name="screens_mail_lists">MLists</string>
    <string name="screens_mail_to_read">To Read</string>
    <string name="screens_mail_archive">Archive</string>
    <string name="screens_mail_trash">Trash</string>
    <string name="screens_mail_sent">Sent</string>
    <string name="screens_settings">Settings</string>
    <string name="screens_lists">Lists</string>
    <string name="screens_files">Files</string>
    <string name="screens_help">Help</string>
    <string name="intent_mail_key">Mail</string>
    <string name="unknown_sender_text_stub">&lt;unknown sender></string>
    <string name="me_and_somebody_text_stub">"Me &amp; "</string>
    <string name="mime_type_text_html">text/html</string>
    <string name="mime_type_text_plain">text/plain</string>

    <string-array name="api_list">
        <item>Calendar</item>
        <item>Contacts</item>
        <item>Files</item>
        <item>Lists</item>
        <item>Mail</item>
    </string-array>

    <!-- Merged -->
    <string name="pending_request">Pending request&#8230;</string>
    <string name="title_activity_view_list_item">Item Details</string>

    <string name="data_id_unknown">Unknown ID</string>
    <string name="data_title_unknown">Unknown Title</string>

    <string name="alert_dialog_title">An Error Occurred</string>
    <string name="alert_dialog_ok">@android:string/ok</string>

    <string name="main_list_create_failure">Unable to create list</string>
    <string name="main_list_create">Add new list</string>

    <string name="main_item_create_failure">Unable to create item</string>
    <string name="main_item_create">Add new item</string>

	<string name="main_item_image_title_default">Sample item</string>
    <string name="main_item_image_url_default">http://www.azulsystems.com/sites/default/files/images/Microsoft_open_tech_logo.jpg</string>
    <string name="main_status_error">Error</string>
    <string name="main_status_error_retrieve_lists">: failed to retrieve lists.</string>

	<string name="main_item_create_dialog_title">Add Item</string>
    <string name="main_item_create_dialog_name">Name</string>
	<string name="main_item_create_dialog_address">Image URL</string>
	<string name="main_item_create_dialog_attach_image">Attach image</string>
	<string name="main_item_create_dialog_attached_image">Attached!</string>
    <string name="main_item_create_dialog_save">Create</string>
    <string name="main_item_create_dialog_cancel">@android:string/cancel</string>

    <string name="main_login_dialog_login">Login</string>
    <string name="main_login_dialog_cancel">@android:string/cancel</string>
    <string name="main_login_dialog_passsword">Password</string>
	<string name="main_login_dialog_password_hint">name@domain.com</string>

    <string name="settings_auth_label">Authentication method:</string>
    <string name="settings_auth_opt_cookie">Cookie</string>
    <string name="settings_auth_opt_oauth">OAuth</string>
    <string name="settings_auth_opt_ntlm">NTLM</string>

</resources>