<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/action_settings"
        android:textColor="@color/dark_grey"
        android:textSize="18dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/dark_grey" />

    <ScrollView
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="12dip"
                android:paddingLeft="8dip"
                android:paddingRight="8dip"
                android:paddingTop="12dip" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_auth_label"
                    android:textColor="@color/dark_grey"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/settings_auth_group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/settings_auth_cookie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:checked="true"
                        android:text="@string/settings_auth_opt_cookie" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/settings_auth_oauth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:text="@string/settings_auth_opt_oauth" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/settings_auth_ntlm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:text="@string/settings_auth_opt_ntlm" >
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" >

                <TextView
                    android:id="@+id/settings_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_selector"
                    android:padding="8dp"
                    android:text="@string/main_item_create_dialog_cancel"
                    android:textColor="@color/button_text_selector" />

                <TextView
                    android:id="@+id/settings_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_selector"
                    android:padding="8dp"
                    android:text="@android:string/ok"
                    android:textColor="@color/button_text_selector" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>